# nixos-images

./: .dockerignore  LICENSE  README.md  README_CN.md  README_DEV.md  docker-compose.yml  iso.nix  releases.json
.github/workflows/: ci.yml  iso-release.yml
docker/: deps.nix  entrypoint.sh  shell.nix
nix/iso/: base.nix  installer.nix  minimal.nix
npins/: sources.json
tools/release-manager/: Cargo.toml
tools/release-manager/src/: main.rs  release_logic.rs
